# books

./: .gitignore  README.md
chap1/: dune-project
lfea/: Lfea.lean  Main.lean  lakefile.lean
lfea/Lfea/Proofs/: Nums.Lean  Regular.lean  Set.lean
lfea/Proofs/: Regular.lean
mciml/chap2/: dune-project
mciml/chap2-3/: dune-project
mciml/rest-of-the-book/test_suite/: first.tg
plfa/: Main.lean  Proofs.lean  lakefile.lean
plfa/Proofs/: Conectives.lean  Equality.lean  Isomorphism.lean  Lambdas.lean  Naturals.lean  Relations.lean
slsw/io/: arr.io  avg.io  div.io  fib.io  first.io
slsw/prolog/: day2.pl  musicians.pl
slsw/ruby/: array.rb  findindex.rb  grep.rb  print.rb  print10.rb  random.rb  tree.rb
